# SoulWaveBot

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/commands/: mod.rs
src/commands/prefix/: hello.rs  mod.rs  ping.rs  translate.rs
src/commands/slash/: hello.rs  mod.rs  ping.rs  translate.rs
src/events/: interaction.rs  message.rs  mod.rs  ready.rs
