[package]
name = "bot1"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
tokio = { version = "1", features = ["full"] }
shuttle-runtime = "0.53.0"
shuttle-serenity = "0.53.0"
tracing = "0.1.37"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1.0"

[dependencies.serenity]
version = "0.12.4"  # Actualiza a una versión más reciente si es posible
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "standard_framework"]